--- a/tutorial/2-views.html
+++ b/tutorial/2-views.html
@@ -36,11 +36,11 @@ var Comment = Backbone.Model.extend({
   },
   upvote: function(){
     // Set the `votes` attribute to the current vote count plus one.
-    this.set('votes', this.get('votes', 1));
+    this.set('votes', this.get('votes') + 1);
   },
   // Add a downvote function; don't forget the comma above.
   downvote: function() {
-    this.set('votes', this.get('votes', -1));
+    this.set('votes', this.get('votes') - 1);
   }
 });
 
@@ -154,7 +154,8 @@ $('body').append(commentView.render());
  * Uncomment the line below and reload the page,
  * and it should say '1' to the left of the comment. */
 comment.upvote();
-
+comment.upvote();
+comment.upvote();
 /* play with this in your console as well.
  * You can modify the comment object in the same way we just did:
  * ```
